--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,9 +29,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  get: ^4.1.4
+  get: ^4.6.5
   dots_indicator: ^2.1.0
-
+  http: ^0.13.5
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
